<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/occurrence_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/occurrence_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/occurrence_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/occurrence_area"
        app:layout_constraintBottom_toTopOf="@id/occurrence_description"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="64dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/occurrence_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/occurrence_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/occurrence_image">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!-- Bottom sheet contents. -->
        <Button
            android:id="@+id/camera_image"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/camera_image"

            />

        <Button
            android:id="@+id/gallery_image"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/gallery_image"
            />

    </FrameLayout>


    <Button
        android:id="@+id/create_occurrence"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/standard_bottom_sheet" />

</androidx.constraintlayout.widget.ConstraintLayout>